--- a/interview/notes/目录.md
+++ b/interview/notes/目录.md
@@ -1,3 +1,8 @@
+# 总览
+
+[Java面试 - Gitee](https://snailclimb.gitee.io/javaguide)
+[Java面试 · 语雀](https://www.yuque.com/itsaysay/mzsmvg)
+
 # Java
 
 ## 基础
@@ -45,7 +50,7 @@
 * [Java 8 学习资源推荐](https://snailclimb.gitee.io/javaguide/#/docs/java/What's_New_in_JDK8/Java8教程推荐)
 * [Java8 forEach 指南](https://snailclimb.gitee.io/javaguide/#/docs/java/What's_New_in_JDK8/Java8foreach指南)  
 
-# 数据结构
+## 数据结构
 
 * [JavaGuide 数据结构](https://blog.csdn.net/u011240877/article/details/52860924)
 * [Java 集合深入理解（9）：Queue 队列](https://blog.csdn.net/u011240877/article/details/52860924) 
