--- a/interview/notes/目录.md
+++ b/interview/notes/目录.md
@@ -18,6 +18,7 @@
 * [ArrayList 源码学习](https://snailclimb.gitee.io/javaguide/#/docs/java/collection/ArrayList) 
 * [LinkedList 源码学习](https://snailclimb.gitee.io/javaguide/#/docs/java/collection/LinkedList) 
 * [HashMap(JDK1.8)源码学习](https://snailclimb.gitee.io/javaguide/#/docs/java/collection/HashMap) 
+* [Java8的HashMap详解（存储结构，功能实现，扩容优化，线程安全，遍历方法）_Java_login_sonata的博客-CSDN博客](https://blog.csdn.net/login_sonata/article/details/76598675)
 
 ## 并发
 
