--- a/interview/notes/常见问题笔记.md
+++ b/interview/notes/常见问题笔记.md
@@ -14,3 +14,25 @@
 * 字符串有常量池，如果使用字面量表示，则使用常量池中的常量。
 * 数字有常量池，其范围是-128~127，如果使用字面量表示，或者使用`valueOf()`表示，或者从原始类型强转类型，则尝试使用常量池中的常量。
 * `valueOf()`方法返回对应的包装类型的数字，并尝试使用常量池中的常量，`parseXxx()`方法返回对应的原始类型的数字。
+
+# 排序算法
+
+* **冒泡排序**
+  * 属于交换排序
+  * 时间复杂度：O(n^2)
+  * 基本思路
+    * 从前往后依次比较相邻元素的值，如果逆序则交换，使最后两个值有序，循环直到完成排序为止。
+    * 如果一趟比较下来没有进行过排序，则说明已经完成排序。
+  * 循环：(i=0;i<length;i++) -> (j=i+1,j<length;j++)
+* **快速排序**
+  * 也叫快速交换排序，属于交换排序，使用到了分治法
+  * 时间复杂度：O(n log n)，性能很高
+  * 基本思路
+    * 从数列中取出一个数作为基准数。
+    * 分区过程，将较小或相等的数放到左边，将较大的数放到右边。
+    * 递归直到各区间只有一个数为止。
+  * 基本思路2
+    * i=L;j=R; 将基准数挖出形成第一个坑`a[i]`。
+    * j--由后向前找比它小的数，找到后挖出此数填前一个坑`a[i]`中。
+    * i++由前向后找比它大的数，找到后也挖出此数填到前一个坑`a[j]`中。
+    * 再重复执行2，3二步，直到i==j，将基准数填入`a[i]`中。
