--- a/interview/notes/面试笔记（准备）.md
+++ b/interview/notes/面试笔记（准备）.md
@@ -32,7 +32,6 @@
 
 这个问题企业问的概率很大，通常不希望听到直接回答的缺点是什么等，如果求职者说自己小心眼、爱忌妒人、非常懒、脾气大、工作效率低，企业肯定不会录用你。绝对不要自作聪明地回答“我最大的缺点是过于追求完美”，有的人以为这样回答会显得自己比较出色，但事实上，他已经岌岌可危了。企业喜欢求职者从自己的优点说起，中间加一些小缺点，最后再把问题转回到优点上，突出优点的部分，企业喜欢聪明的求职者。
 
-
 ### 我的回答
 
 我觉得我最大的缺点就是性格存在一定的缺陷。受到家庭环境的影响，尽管我有意识到并努力尝试改正，这仍然是一件很难避免的事情。所以，我觉得我的性格实际上是有些内向的，不善于与人沟通的。~~但是另一方面，我的朋友常常会说我“可爱”，也许是我的性格有些特立独行吧。~~
@@ -117,3 +116,11 @@
 ### 我的回答
 
 分清责任，各负其责，如果是我的责任，我甘愿受罚；如果是一个我负责的团队中别人的失误，也不能幸灾乐祸，作为一个团队，需要互相提携共同完成工作，安慰同事并且帮助同事查找原因总结经验。
+
+# 项目开发中遇到的问题：
+
+* Arrays.asList()和List.of()方法返回的列表的只读性
+* 不需要等待执行完毕的操作
+* allopen和noarg编译插件的必要性：spring和jpa低层的cglib动态代理 
+* 特殊注解如@Primary在特殊情况下的必要性
+
