--- a/interview/notes/面试笔记（准备）.md
+++ b/interview/notes/面试笔记（准备）.md
@@ -13,7 +13,7 @@
 
 ### 我的回答
 
-面试官你好，我的名字是施诚，22岁，来自安徽池州，是一名计算机专业的应届生。我的性格沉稳、随和而乐观，热爱思考问题，拥有自主学习能力。我的兴趣爱好算不上多，姑且可以算上看书、玩单机游戏以及……敲代码。我对自己的专业非常感兴趣，也非常愿意接受和学习新知识、新技术，另外也有一些代码洁癖。以上，谢谢。
+面试官你好，我叫施诚，是一名2020届九江学院计算机科学与技术专业的应届生，来安徽池州。 我性格沉稳、随和而乐观，热爱思考问题和钻研问题。我对编程抱有浓厚的兴趣，愿意花费时间和精力在编程学习和项目开发上，也乐于接受和学习新技术、新知识。我熟悉java、kotlin、前端技术和一些常见的框架，例如spring全家桶、ssm和vue。我能够熟练使用这些技术进行项目开发，曾经开发过一些练习项目和工具类库。以上就是我的个人介绍。
 
 ## 你觉得你个性上最大的优点是什么?
 
@@ -117,10 +117,16 @@
 
 分清责任，各负其责，如果是我的责任，我甘愿受罚；如果是一个我负责的团队中别人的失误，也不能幸灾乐祸，作为一个团队，需要互相提携共同完成工作，安慰同事并且帮助同事查找原因总结经验。
 
-# 项目开发中遇到的问题：
+# 项目开发中遇到的问题
 
 * Arrays.asList()和List.of()方法返回的列表的只读性
-* 不需要等待执行完毕的操作
-* allopen和noarg编译插件的必要性：spring和jpa低层的cglib动态代理 
-* 特殊注解如@Primary在特殊情况下的必要性
+* 不需要等待执行完毕的操作，有必要使用线程或协程处理
+* ~~allopen和noarg编译插件的必要性：spring和jpa低层的cglib动态代理 ~~
+* 特殊注解如`@Primary`在特殊情况下的必要性
 
+# 向面试官的提问
+
+* 下一步的招聘流程是怎样的？
+* 贵公司对新入公司的员工有没有什么培训项目？
+* 贵公司的项目中都使用到了哪些技术？
+* 贵公司有什么技术挑战？
