--- a/interview/notes/目录.md
+++ b/interview/notes/目录.md
@@ -3,7 +3,7 @@
 [Java面试 - Gitee](https://snailclimb.gitee.io/javaguide)
 [Java面试 · 语雀](https://www.yuque.com/itsaysay/mzsmvg)
 
-# Java
+# Java面试 - Gitee
 
 ## 基础
 
