--- a/interview/notes/summary/常见问题笔记.md
+++ b/interview/notes/summary/常见问题笔记.md
@@ -43,9 +43,12 @@
 
 ## 个人介绍
 
-面试官你好，我叫施诚，是一名2020届九江学院计算机科学与技术专业的应届生，来安徽池州。 我性格沉稳、随和而乐观，热爱思考问题和钻研问题。我对编程抱有浓厚的兴趣，愿意花费时间和精力在编程学习和项目开发上，也乐于接受和学习新技术、新知识。我熟悉java、kotlin、前端技术和一些常见的框架，例如spring全家桶、ssm和vue。我能够熟练使用这些技术进行项目开发，曾经开发过一些练习项目和工具类库。以上就是我的个人介绍。
+面试官你好，我叫施诚，是一名2020届九江学院计算机科学与技术专业的应届生，来安徽池州。我性格沉稳、随和而乐观，热爱思考问题和钻研问题。我对编程抱有浓厚的兴趣，拥有良好的自主学习能力和整理归纳能力，愿意花费时间和精力在编程学习和项目开发上，并且乐于接受和学习新技术、新知识。我熟悉java、kotlin和前端技术，能够熟练使用spring boot、spring data jpa、mybatis、vue等主流开源框架，曾经开发过相关练习项目和工具类库。以上就是我的自我介绍。
 
 ## 项目开发中遇到的问题
+
+可以从毕业设计项目的开发流程说起：
+java→lombok→lombok++→kotlin→allopen和noarg→jpa级联→{pageable}→@DateFormat→@Primary→并发的必要性
 
 * 需要特别关注的基础问题：字符串的几种比较方式
 * 需要特别关注的基础问题：`Arrays.asList()`和`List.of()`方法返回的列表的只读性
@@ -55,7 +58,7 @@
 * 深入学习和导师的必要性：特殊注解如`@Primary`在特殊情况下的必要性
 * 前端页面元素的排序方式：最好统一使用流式布局，因为第三方提供的排序方式可能不完善。
 * Vue响应式的问题：监听器不会监听数组或对象内部的变化
-* 传参：前端传递Pageable参数时的几个属性，
+* 传参：前端传递Pageable参数时的几个属性
 * 实践：`findByFooList`在jpa中是合法的
 * 传参：jackson必须通过`@DateFormat`格式化时间到前端
 * junit4和junit5：后者可以构造器自动装配，可以非public的类和方法
