--- a/interview/notes/summary/常见问题笔记.md
+++ b/interview/notes/summary/常见问题笔记.md
@@ -39,6 +39,16 @@
     * i++由前向后找比它大的数，找到后也挖出此数填到前一个坑`a[j]`中。
     * 再重复执行2，3二步，直到i==j，将基准数填入`a[i]`中。
 
+## ArrayList的扩容机制
+
+* ArrayList的默认容量为0，最小扩容长度为`所需容量-当前容量`，最大数组长度为`Integer.MAX_VALUE-8`
+* 构造ArrayList时，如果指定了初始容量，则为指定值，否则为默认容量。构造时会直接初始化其所维护的数组。
+* 当列表长度等于当前容量时，会进行扩容操作。
+* 如果新的容量小于等于最大数组长度，则新的容量为旧的容量的1.5倍，使用到了无符号右位移运算符；
+  否则，若最小扩容长度小于等于最大数组长度，则扩容到最大数组长度，否则扩容到`Integer.MAX_VALUE`。
+  
+## HashMap的扩容机制
+
 # 沟通性问题
 
 ## 个人介绍
