--- a/interview/notes/面试技巧、简历撰写和就业指导.md
+++ b/interview/notes/面试技巧、简历撰写和就业指导.md
@@ -15,7 +15,7 @@
     * 你为了兴趣做过哪些疯狂的事情？
     * 你是否为此去学习过做过兼职？
     * 你的兴趣获得过什么荣誉？
-    * 如果把兴趣编程职业，你愿意给自己几年时间尝试？
+    * 如果把兴趣变成职业，你愿意给自己几年时间尝试？
     * 你能够承受最坏的结果吗？
 
 > 与其专于兴趣，不如专于优势
@@ -23,7 +23,8 @@
 ## 职业选择的三个考量点
 
 > 职业选择不要脱离实际
-> > 先生存后生活
+>
+> 先生存后生活
 
 * 前途和钱途（重要）
 * 天赋和特长（重要）
@@ -90,7 +91,7 @@
 
 # 武装自己的两个技能包
 
-## 学活谋生的一技之长
+## 学会谋生的一技之长
 
 * 学习的思路
   * 初入职场，一样精通于百样通
@@ -184,7 +185,7 @@ HR没有义务去发现你的内在美
 细节决定成败
 
 * +不要有错别字，英文大小写要统一，全半角要统一
-* +word板的简历要满页呈现
+* +word版的简历要满页呈现
 * +简历中的用词要精炼准确，摆数据，亮结果
 * +具体的数字、具体的结果、具体的事实
 * +不要写“熟悉”，而要写“熟练掌握”
@@ -333,7 +334,7 @@ HR没有义务去发现你的内在美
 
 ## 脸皮薄吃不着，脸皮厚吃个够
 
-* 可不可以投之前据过的公司？
+* 可不可以投之前被拒过的公司？
   * 可以，投了有希望，不投没希望
 * 过了约定的时间能不能询问结果？
   * 可以，该问就问
@@ -913,26 +914,31 @@ HR没有义务去发现你的内在美
 试用期长达半年之久，合法吗？
 
 > 劳动法规定：
+>
 > > 合同期限三个月以上不满一年的，试用期不得超过一个月；合同期限在一年以上不满三年的，试用期不得超过三个月；三年以上（含三年）固定期限和无固定期限合同，试用期不得超过六个月。
 
 使用期间如果不符合职位需求，公司可以解雇职位而不给补偿金。
 
 > 劳动合同法规定：
+>
 > > 劳动者解除劳动合同，应当提前30日以书面形式通知用人单位。
 
 ### 误区一：试用期不需要签订劳动合同
 
 > 劳动合同法规定
+>
 > > 建立劳动关系就应当订立劳动合同，用人单位最迟在劳动者开始为其工作时签订，而不是试用期满后签订劳动合同。
 
 ### 误区二：试用期的薪水都是八折促销
 
 > 劳动合同法规定：
+>
 > > 劳动者在试用期的工资不得低于本单位相同岗位最低档工资或者劳动合同约定工资的百分之八十，并不得低于用人单位所在地的最低工资标准。
 
 ### 误区三：试用期没保险，转正了才有
 
 > 劳动合同法规定：
+>
 > > 试用期包含在劳动合同期限内。
 
 ## 五险一金的小科普
@@ -953,6 +959,7 @@ HR没有义务去发现你的内在美
 ### 不要五险一金让公司多发点钱，为什么老板不同意呢？
 
 > 劳动合同法规定：
+>
 > > 用人单位未依法为劳动者缴纳社会保险费的，劳动者可以解除劳动合同，用人单位还应当支付经济补偿金。
 
 ## 保密协议与竞业禁止
@@ -975,6 +982,7 @@ HR没有义务去发现你的内在美
 ### 合同还有半个月到期，公司还没有续签，能否提前半个月辞职
 
 > 劳动合同法规定：
+>
 > > 因用人单位原因未办理终止或续订劳动合同，劳动者继续在该用人单位工作，形成事实劳动关系的，视为劳动合同法的继续履行。
 
 # 如何顺利度过试用期
