--- a/interview/notes/summary/常见问题笔记.md
+++ b/interview/notes/summary/常见问题笔记.md
@@ -53,6 +53,8 @@
 
 ## 个人介绍
 
+- [ ] 待完善
+
 面试官你好，我叫施诚，是一名2020届九江学院计算机科学与技术专业的应届生，来安徽池州。我性格沉稳、随和而乐观，热爱思考问题和钻研问题。我对编程抱有浓厚的兴趣，拥有良好的自主学习能力和整理归纳能力，愿意花费时间和精力在编程学习和项目开发上，并且乐于接受和学习新技术、新知识。我熟悉java、kotlin和前端技术，能够熟练使用spring boot、spring data jpa、mybatis、vue等主流开源框架，曾经开发过相关练习项目和工具类库。以上就是我的自我介绍。
 
 ## 项目开发中遇到的问题
@@ -73,6 +75,7 @@ java→lombok→lombok++→kotlin→allopen和noarg→jpa级联→{pageable}→@
 * 传参：jackson必须通过`@DateFormat`格式化时间到前端
 * junit4和junit5：后者可以构造器自动装配，可以非public的类和方法
 * jpa级联：没有想象中的那么好，情况太复杂
+* 后续整理：良好的目录结构和妥善的存储（电脑重装）
 
 ## 向面试官的提问
 
@@ -80,4 +83,4 @@ java→lombok→lombok++→kotlin→allopen和noarg→jpa级联→{pageable}→@
 * 贵公司对新入公司的员工有没有什么培训项目？
 * 贵公司的项目中都使用到了哪些技术？
 * 贵公司有什么技术挑战？
-
+* 贵公司在Github有没有什么开源项目？
