--- a/insight/notes/时间管理八堂课.md
+++ b/insight/notes/时间管理八堂课.md
@@ -3,7 +3,7 @@
 一个人是否有时间观念：
 
 * 守时→遵守承诺，体现时间观念和道德修养
-  * 不迟到→避免不好打了联想
+  * 不迟到→避免不好的联想
   * 不掐点到→为了做好准备
   * 不太早到→避免打断对方的安排
   * 提前几分钟到
@@ -33,9 +33,8 @@
 看书最重要的是什么：
 看成自己知识的积累和行为的改变
 
-比勤奋更重要的是：
-深度思考的能力
---
+比勤奋更重要的是：深度思考的能力
+
 知识从来不是力量，运用知识才是力量
 
 # 不慢性自杀，也不谋财害命
@@ -64,8 +63,6 @@
 * 言简意赅
 
 # 没时间背后的真相
-
-> 即使已经在一定程度上利用时间，也可以更加集中时间，尽量避免各种琐事和被打断的情况
 
 没时间其实是个伪命题
 
@@ -140,7 +137,7 @@
 
 # 治愈拖延症患者的良药
 
-一件事有很长时间（可以）把它作为，一定拖到最后再做，这就叫拖延
+一件事有很长时间（可以）把它做完，一定拖到最后再做，这就叫拖延
 
 常见的拖延病灶有三点：
 * 懒惰
@@ -169,6 +166,7 @@
 
 # 感悟
 
+* 即使已经在一定程度上利用时间，也可以更加集中时间，尽量避免各种琐事和被打断的情况
 * 至少应当确定编写待办列表，确认每日计划，即使未必能够做完
 * 至少应该保证每天写日记，即使睡得很晚，也要给个理由
 * 每天都要留出一点时间来思考和复习笔记
@@ -176,3 +174,4 @@
 * 计划总是好过变化，文字总是好过纯粹的想法
 * 在学会找乐子的同时学会知足，巨大的快乐也意味着巨大的付出（代价）
 * 可能需要花费大量时间去做的事情（玩游戏、敲代码等），可以放到一天的最后时间（深夜）去做
+* 不要重复看轮子（写代码，看视频，翻博客），但在条件允许的前提下，可以尝试自己造轮子（写代码，整理笔记）
