--- a/insight/notes/心态修炼七堂课.md
+++ b/insight/notes/心态修炼七堂课.md
@@ -13,8 +13,8 @@
 > * 你够勤奋吗？→~~足够勤奋~~
 > * 你持之以恒吗？→~~仅对有能力且有经验的目标~~
 > * 你安排有序吗？→~~缺乏计划~~
-> * 你又创造性吗？（想方设法解决问题的能力）→~~仅对自己熟悉的领域~~
-> * 你经历集中吗？→~~常常进入这种状态~~
+> * 你有创造性吗？（想方设法解决问题的能力）→~~仅对自己熟悉的领域~~
+> * 你精力集中吗？→~~常常进入这种状态~~
 > * 你正直吗？（有正常和正确的心态）→~~仍然需要调整~~
 > * 你乐观吗？→~~是~~
 > * 你愿意与人合作吗？→~~是~~
@@ -87,7 +87,7 @@
 
 比较是一种局限和狭隘，会让你变得不思进取
 
-优秀的人总能看到比自己更好的，平庸的人长红恩那个看到比自己更差的
+优秀的人总能看到比自己更好的，平庸的人总能看到比自己更差的
 
 如果你是这个房间里最聪明的人，那你一定走错了房间
 
@@ -163,5 +163,6 @@
 
 # 感悟
 
-* 认怂的人生之道——先认错能够有助于解决很多问题
-* 闷声发大财的道理——少说话多做事，不要让别人被动在乎自己，而是要想法设法让别人主动在乎自己
+* 认怂的人生之道——先认错能够有助于解决很多问题。
+* 闷声发大财的道理——少说话多做事，不要让别人被动在乎自己，而是要想法设法让别人主动在乎自己。
+* 选择的双向性——一旦做出选择，就要为此付出责任，你选择了那个选择，你也要让那个选择选择你。
