--- a/interview/notes/summary/常见问题笔记.md
+++ b/interview/notes/summary/常见问题笔记.md
@@ -41,11 +41,18 @@
 
 ## ArrayList的扩容机制
 
-* ArrayList的默认容量为0，最小扩容长度为`所需容量-当前容量`，最大数组长度为`Integer.MAX_VALUE-8`
-* 构造ArrayList时，如果指定了初始容量，则为指定值，否则为默认容量。构造时会直接初始化其所维护的数组。
+* ArrayList的默认容量为`10`，最小扩容长度为`所需容量-当前容量`，最大数组长度为`Integer.MAX_VALUE-8`。
+* 构造时，如果指定了初始容量，则为指定值；否则为默认容量（`10`）；如果指定集合则使用集合的长度为初始容量。
+* 构造时，会直接初始化其所维护的数组。
 * 当列表长度等于当前容量时，会进行扩容操作。
-* 如果新的容量小于等于最大数组长度，则新的容量为旧的容量的1.5倍，使用到了无符号右位移运算符；
-  否则，若最小扩容长度小于等于最大数组长度，则扩容到最大数组长度，否则扩容到`Integer.MAX_VALUE`。
+* 如果旧的容量小于等于0，则扩容到默认容量（`10`）和最小扩容长度中的较大值。
+* 否则：
+  * 如果新的容量小于等于最大数组长度
+    * 如果最小扩容长度小于等于理想扩容长度（`oldCapacity >>> 1`），则新的容量为旧的容量的1.5倍，使用到了无符号右移运算符。
+    * 否则新的容量为旧的容量加上最小扩容长度。
+  * 否则：
+    * 如果旧的容量加上最小扩容长度小于等于最大数组长度（`Integer.MAX_VALUE - 8`），则扩容到最大数组长度。
+    * 否则扩容到整型最大值（`Integer.MAX_VALUE`）。
   
 ## HashMap的扩容机制
 
