--- a/interview/notes/summary/面试总结.md
+++ b/interview/notes/summary/面试总结.md
@@ -24,3 +24,30 @@
 * Gitlab（没有什么区别）
 * RabbitMq（不是RocketMq）
 
+## 合肥一家公司（疑似培训机构或存在合作）
+
+## 面试官问的一些问题
+
+* 面向对象三大特征
+  * 应该扩展说说各自的要点和示例
+* Class对象的几种获取方式
+  * 主要包括3种：`类.class`，`实例.getClass()`，`Class.forName(name)`。
+* 讲讲ssm框架
+  * 应该扩展说说springmvc的运行流程，spring的两大特征和mybatis的运行流程
+* springboot如何打包war部署到linux服务器上
+  * 通过maven导出war包
+  * 配置好linux环境
+  * 通过rz命令传输到linux上的tomcat的webapps目录下
+  * 启动tomcat，然后通过浏览器访问项目地址
+* spring cloud有什么了解吗？（可以说说主要的组件和熔断相关）
+  * 分布式、微服务框架，许多组件的组合
+  * Eureka 服务注册中心，分为客户端和服务端
+  * Ribbon 客户端负载均衡工具
+  * Feign 声明式客户端负载均衡工具
+  * Hystrix 熔断器（服务雪崩：请求链上一个服务出现问题，导致其他调用的服务依次等待）
+
+## 要点
+
+* 自学很难得到offer机会
+* 进入培训机构比通过网上的免费视频教程更好
+* 初级工程师和高级工程师只是项目经验的区别，所有技术都要掌握
