--- a/interview/notes/misc/电话面试准备.md
+++ b/interview/notes/misc/电话面试准备.md
@@ -71,12 +71,11 @@ FAQ：
 
 ## 你的职业规划是什么
 
-我的职业目标是一名后端高级工程师，甚至是全栈工程师。
-贵公司地点理想、招聘要求与个人经历相近，是一个良好的起点。
+我的职业目标是一名后端高级工程师，甚至是全栈工程师，但对自己感兴趣的其他领域也有研究。
 
-* 一年内，为自己的职业生涯打下良好的基础，并找到一份正式的工作。
-* 二年内，继续加强学习，拥有一份不错的工作的同时，开发和维护一些自己的开源项目。
-* 三年内，充分了解自己关注的专业知识，升职到理想的职位，拥有一些受关注的开源项目。
+* 一年内，做好第一份实习工作，熟练掌握基础的专业知识，最终找到一份稳定的、有发展前景的正式工作。
+* 二年内，继续加强学习，拥有一份不错的工作的同时，尝试开发和维护一些自己的开源项目。
+* 三年内，充分掌握自己所关注的专业知识，凭借个人实力升职到理想的职位，同时拥有一些受关注的开源项目。
 
 希望在实习过程中能够总结整理出更多的Bug/问题的解决方案，以后可以少踩一些坑。
 
