--- a/interview/notes/summary/面试总结.md
+++ b/interview/notes/summary/面试总结.md
@@ -55,3 +55,23 @@
 # 江西招腾教育
 
 * 30号之前没有消息表明不合适。
+
+# 热璞数据库电话面试
+
+提问：
+
+* 描述一些MySQL，能说多少是多少？
+  * 当前仍然不是特别熟悉，应该整理自己的笔记的
+* 具体说明数据库的隔离级别和丢失情况？
+  * 一时卡壳，其实就是提交、字段修改、列的增删三个层次的问题，应该按照自己的笔记回答
+* 如何按照步骤一步一步实现前端数据化测试？
+  * 不太明白，但尽力讲清楚了。
+
+MISC：
+
+* 了解产品做什么有什么价值。
+* 通过PPT来总结自己所学知识（不能是思维导图）
+* 自己语言方面吐字有些不太清晰，更久停顿一下其实没有关系。
+* （对于数据库）基础知识薄弱，对于自己了解的东西能够很好地掌握。~~（这个的确是事实）~~
+* 当做前端可视化测试时可以从一个单一页面的小的demo开始。
+* 就面试官而言自己的表现并没有太大的问题（通过了？还是要求就是这样低？）
