--- a/interview/notes/detail/面试技巧、简历撰写和就业指导.md
+++ b/interview/notes/detail/面试技巧、简历撰写和就业指导.md
@@ -917,7 +917,7 @@ HR没有义务去发现你的内在美
 >
 > > 合同期限三个月以上不满一年的，试用期不得超过一个月；合同期限在一年以上不满三年的，试用期不得超过三个月；三年以上（含三年）固定期限和无固定期限合同，试用期不得超过六个月。
 
-使用期间如果不符合职位需求，公司可以解雇职位而不给补偿金。
+试用期间如果不符合职位需求，公司可以解雇职位而不给补偿金。
 
 > 劳动合同法规定：
 >
