--- a/interview/notes/private/笔试题笔记.md
+++ b/interview/notes/private/笔试题笔记.md
@@ -16,13 +16,14 @@
 * 提供标准协议支持，支持敏捷开发。
 
 对于以上几点的理解：
+
 * 高并发分布式数据库是目前行业的趋势。
 * 数据库在高并发的情况下需要保证高可用性。
 * 为了保证高可用性，需要对数据库进行优化。
 * 优化的方式有物理扩容、重新分片、数据移动、数据重新分布等。
 * 优化必须在线进行，保证数据库总是可用。
-* 优化在业务高峰时暂停，在业务低谷时开始。
-* 需要考虑扩展性和兼容性。
+* 优化在业务高峰时暂停，在业务低谷时继续。
+* 不管任何功能都需要考虑扩展性和兼容性。
 
 一句话总结：想法设法钻空子，而又不失技巧性地保证分布式数据库的高可用性。
 
@@ -106,4 +107,6 @@
 * 为了方便编辑善用隐藏组件功能。
 * 动画帧可以通过鼠标拖动快速排序。
 * 当复制组件时可会复制它的动画效果。
-* 善用Atl组合快捷键快速切换菜单，或者调用快捷栏上的功能。
+* 善用Alt组合快捷键快速切换菜单，或者调用快捷栏上的功能。
+* 有必要通过视频教程深入学习PPT。
+* 有必要买一个好一点的电脑。太卡了。
